--- a/Final-Project1/Areas/admin/Views/CarDetail/Edit.cshtml
+++ b/Final-Project1/Areas/admin/Views/CarDetail/Edit.cshtml
@@ -1,71 +1,128 @@
 ﻿@model DetailVM
-@*Düzenlenecek*@
+
 <div class="right_col" role="main">
-    <div class="">
-        <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h2>Marka Düzenle</h2>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="x_content">
-                        <br />
-                        <form class="form-horizontal form-label-left" asp-controller="CarDetail" asp-action="Edit" method="post" enctype="multipart/form-data">
-                            @Html.AntiForgeryToken()
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            <div class="x_panel">
+                <div class="x_title">
+                    <h2>Yeni Araç Ekle</h2>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="x_content">
+                    <br />
+                    <form enctype="multipart/form-data" class="form-horizontal form-label-left" asp-controller="CarDetail" asp-action="New" method="post">
+                        @Html.AntiForgeryToken()
 
-                            <input type="hidden" asp-for="CarDetail.Id" />
 
-                            <div class="form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="CarBrandId">Araç Markası</label>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <select class="form-control" asp-for="CarDetail.CarBrandId" asp-items="@(new SelectList(Model.CarBrands, "Id", "Name", Model.CarDetail.CarBrandId))">
-                                        <option value="">Araçın Markasını Seçin</option>
-                                    </select>
-                                    <span asp-validation-for="CarDetail.CarBrandId" class="text-danger"></span>
-                                </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Araç Markası</label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <select class="form-control combobox"
+                                        asp-items="@(new SelectList(Model.CarBrands, "Id", "Name", Model.CarDetail.CarBrandId))"
+                                        onchange="GetModel(this)">
+                                    <option value="">Marka Seçiniz</option>
+                                </select>
+
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Araç Modeli</label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <select class="form-control combobox selectModel"
+                                        asp-for="CarDetail.CarBrandId">
+                                    <option value="">Model Seçiniz</option>
+                                </select>
                             </div>
 
-                            <div class="form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12">Mevcut Fotoğraflar</label>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    @if (Model.CarPictures != null && Model.CarPictures.Any())
-                                    {
-                                        <div>
-                                            @foreach (var pic in Model.CarPictures)
-                                            {
-                                                <img src="@pic.ImagePath" alt="Car Image" style="width:100px; height:70px; margin-right:10px; border:1px solid #ccc; padding:2px;" />
-                                            }
-                                        </div>
-                                    }
-                                    else
-                                    {
-                                        <p>Bu araç için fotoğraf yok.</p>
-                                    }
-                                </div>
-                            </div>
+                        </div>
 
-                            <div class="form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Pictures">Fotoğraf Yükle (İsteğe Bağlı)</label>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input type="file" name="Pictures" multiple class="form-control col-md-7 col-xs-12" />
-                                    <span asp-validation-for="Pictures" class="text-danger"></span>
-                                </div>
-                            </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="CarDetail.CarKilometer">Araç Kilometre</label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input asp-for="CarDetail.CarKilometer" type="number" class="form-control" />
 
-                            <div class="form-group">
-                                <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                    <a class="btn btn-primary" asp-controller="CarDetail" asp-action="Index">İptal</a>
-                                    <button class="btn btn-primary" type="reset">Reset</button>
-                                    <button type="submit" class="btn btn-success">Güncelle</button>
-                                </div>
                             </div>
+                        </div>
 
-                        </form>
-                    </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="CarDetail.CarYear">Araç Yılı</label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input asp-for="CarDetail.CarYear" type="number" class="form-control" />
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="CarDetail.CarColor">Araç Rengi</label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input asp-for="CarDetail.CarColor" class="form-control" />
+
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="CarDetail.DailyPrice">Araç Fiyatı</label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input asp-for="CarDetail.DailyPrice" type="number" class="form-control" />
+
+                            </div>
+                        </div>
+
+
+
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="CarDetail.DisplayIndex">Görünürlük Sırası</label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input asp-for="CarDetail.DisplayIndex" type="number" class="form-control" />
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="CarDetail.Description">Açıklama</label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <textarea class="form-control" asp-for="CarDetail.Description" id="editor1"></textarea>
+
+                                <span asp-validation-for="@Model.CarDetail.Description"></span>
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <h3>Ürün Resimleri</h3>
+                        </div>
+                        <hr />
+
+
+                        <div class="form-group">
+                            <label>Resimleri Seçiniz</label>
+                            <input class="form-control" type="file" name="Pictures" multiple />
+                            <small class="form-text text-muted">Birden fazla resim seçebilirsiniz</small>
+
+                        </div>
+
+                        <div class="ln_solid"></div>
+
+                        <div class="form-group">
+                            <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+                                <a class="btn btn-primary" asp-controller="CarDetail" asp-action="Index">İptal</a>
+                                <button type="reset" class="btn btn-primary">Reset</button>
+                                <button type="submit" class="btn btn-success">Ekle</button>
+                            </div>
+                        </div>
+
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="//cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>
+<script>
+    CKEDITOR.replace('editor1');
 
+    $(document).ready(function () {
+        $('.combobox').select2();
+
+    });
+</script>
