--- a/Final-Project1/Areas/admin/Views/CarDetail/Index.cshtml
+++ b/Final-Project1/Areas/admin/Views/CarDetail/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<CarDetail>
+﻿@model IEnumerable<CarDetail>
+
 
 <div class="right_col" role="main">
 
@@ -17,7 +18,7 @@
             </div>
 
             <div class="x_content">
-
+                
 
                 <div class="table-responsive">
                     <table class="table table-striped jambo_table bulk_action">
@@ -37,49 +38,45 @@
                         </thead>
 
                         <tbody>
-                            @foreach (CarDetail m in Model)
+                            @if (Model != null)
                             {
-                                <tr class="even pointer">
-                                    <td>@m.CarBrand.Name</td>
-                                    <td>@m.CarBrand.ParentBrand?.Name </td>
-                                    <td>@m.CarKilometer</td>
-                                    <td>@m.CarYear</td>
-                                    <td>@m.DailyPrice.ToString("C")</td>
-                                    <td>@m.Description</td>
-                                    <td>@m.DisplayIndex</td>
-                                   
+                                foreach (CarDetail m in Model)
+                                {
+                                    if (m == null) { continue; }
 
-                                        @if (m.Images.Any())
+                                    <tr class="even pointer">
+                                        <td>@m.CarBrand?.Name</td>
+                                        <td>@m.CarBrand?.ParentBrand?.Name</td>
+                                        <td>@m.CarKilometer</td>
+                                        <td>@m.CarYear</td>
+                                        <td>@m.DailyPrice.ToString("C")</td>
+                                        <td>@Html.Raw(m.Description)</td>
+                                        <td>@m.DisplayIndex</td>
+
+                                        @if (m.Images != null && m.Images.Any())
                                         {
-                                        <td style="color:red;">
-                                            <a> Ürüne ait resimler</a>
-                                        </td>
-                                    }
-                                    else
-                                    {
-                                        <td style="color:blue;">
-                                            Ürüne ait resim yok
-                                        </td>
-                                    }
-                                        
+                                            <td style="color:red;">
+                                                <a> Ürüne ait resimler</a>
+                                            </td>
+                                        }
+                                        else
+                                        {
+                                            <td style="color:blue;">
+                                                Ürüne ait resim yok
+                                            </td>
+                                        }
+
                                         <td>
                                             <a class="btn btn-info" asp-controller="CarDetail" asp-action="Edit" asp-route-id="@m.Id">Düzenle</a>
                                             <a class="btn btn-danger" asp-controller="CarDetail" asp-action="Delete" asp-route-id="@m.Id">Sil</a>
                                         </td>
-
-
                                     </tr>
-                             }
-
-
-
+                                }
+                            }
                         </tbody>
-                    </table>
+                      </table>
+                    </div>
                 </div>
-
-
             </div>
         </div>
-    </div>
-
 </div>
